--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .row{
   position: relative;
   width: 100%;
@@ -6,6 +11,25 @@
   content: '';
   display: table;
   clear: both;
+}
+.insert-yourcolor{
+  display: flex;
+  justify-content: center;
+  background: lightgrey;
+  margin: 0 0 60px 0;
+  padding: 20px;
+}
+.insert-yourcolor input{
+  height: 30px;
+  padding: 5px;
+  margin-right: 10px;
+  line-height: 30px;
+  font-size: 20px;
+}
+.insert-yourcolor button{
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 5px;
 }
 .first-color{
   display: block;
