--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 .insert-yourcolor{
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   background: lightgrey;
   margin: 0 0 60px 0;
   padding: 20px;
@@ -22,7 +23,7 @@
 .insert-yourcolor input{
   height: 30px;
   padding: 5px;
-  margin-right: 10px;
+  margin: 10px 10px 0;
   line-height: 30px;
   font-size: 20px;
 }
@@ -30,6 +31,12 @@
   padding: 5px;
   font-size: 15px;
   border-radius: 5px;
+  margin: 10px 0;
+}
+
+.results{
+  width: 80%;
+  padding:0 10%;
 }
 .first-color{
   display: block;
