--- a/css/style.css
+++ b/css/style.css
@@ -22,19 +22,21 @@ body{
   clear: both;
 }
 .insert-yourcolor{
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
   background: lightgrey;
   margin: 0 0 60px 0;
   padding: 20px;
 }
-.insert-yourcolor input{
+.insert-yourcolor label{
+  display: inline-block;
+  min-width: 200px;
+}
+.insert-yourcolor input,
+.insert-yourcolor select{
   height: 30px;
   padding: 5px;
   margin: 10px 10px 0;
   line-height: 30px;
-  font-size: 20px;
+  font-size: 18px;
 }
 .insert-yourcolor button{
   padding: 5px;
